documentacion movida a docs y cambio en las subsecciones de implementacion

--- a/docs/documentacion.tex
+++ b/docs/documentacion.tex
@@ -50,15 +50,30 @@ Describe aquí el contexto del proyecto, motivación y objetivos.
 Preliminares
 
 \section{Implementación}
-Implementación
-\begin{itemize}
-    \item Implementación del Otelo en \texttt{pygame} sin agente adversario.
-    \item Diseño del agente MCTS con UCT.
-    \item Generación de datos para la red neuronal.
-    \item Diseño e implementación de la red neuronal.
-    \item Entrenamiento de la red neuronal.
-    \item Implementación de agente adversario.
-\end{itemize}
+Para la implementación del proyecto se han realizado los siguientes pasos: se ha creado una versión inicial de Otelo utilizando Pygame, se ha creado un agente básico utilizando el algoritmo de Monte Carlo Tree Search, se han generado datos a partir de ese agente básico, se ha creado y, posteriormente, entrenado una red neuronal a partir de los datos generados, se ha utilizado la red neuronal como sustituta de una de las funciones de las que hace uso la implementación inicial del algoritmo MCTS y, finalmente, se ha adaptado la versión inicial de Otelo (en la que no se podía jugar contra ningún adversario) para que el agente desarrollado pudiese jugar contra el usuario.
+
+A continuación, desarrollaremos la implementación de cada uno de los pasos mencionados.
+
+\subsection{Otelo en \texttt{pygame}}
+El primer paso a seguir en la implementación del proyecto fue la creación del juego Otelo que nos serviría como base para crear tanto el agente MCTS como el agente final que haría uso de la red neuronal.
+
+
+
+\subsection{Agente MCTS con UCT}
+
+
+\subsection{Generación de datos}
+
+
+\subsection{Diseño de la red neuronal}
+
+
+\subsection{Entrenamiento de la red neuronal}
+
+
+\subsection{Agente adversario}
+
+
 
 \section{Pruebas y experimentación}
 Explica qué datos has obtenido, cómo se comporta el agente, etc. Puedes incluir tablas, gráficos, o descripciones.
